syntax = "proto3";

package common;

enum MessageId {
  Status = 0;
  NewBlockHashes = 1;
  Transactions = 2;
  GetBlockHeaders = 3;
  BlockHeaders = 4;
  GetBlockBodies = 5;
  BlockBodies = 6;
}

message MessageData {
  MessageId message_id = 1;
  bytes data = 2;
}